css/style.css
.vt323-regular {
  font-family: "VT323", monospace;
  font-weight: 400;
  font-style: normal;
}
h1{
    font-family: "VT323";
    text-align: center;
    border:solid black 3px;
    border-radius: 15px;
    padding: 20px;
    width: 620px;
    margin: 0 auto;
    margin-bottom: 20px;
    margin-top: 15px;
}
.display{
    border: solid black 3px;
    border-radius: 15px;
    height: 60px;
    width: 620px;
    margin: 0 auto;
    margin-bottom: 20px;
    display:flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
}
#timer{
    text-align: left;
}
#message{
    text-align: center;
}
#score{
    text-align: right;
}
.game{
    border: solid black 3px;
    /* background-color: red; */
    border-radius: 15px;
    background-image: url(/assets/background.jpg);
    height: 400px;
    width: 650px;
    background-position: center;
    background-size: cover;
    margin: 0 auto;
    margin-bottom: 20px;
}
.button{
    display: flex;
    justify-content: center;
    align-content: center;
}
.start{
    border: solid black 3px;
    border-radius: 15px;
    text-align: center;
    height: 70px;
    align-content: center;
    align-items: center;
    width: 300px;
    margin: 0 ;
    margin-right: 10px;
}
.reset{
  border: solid black 3px;
    border-radius: 15px;
    text-align: center;
    height: 70px;
    align-content: center;
    align-items: center;
    width: 300px;
    margin: 0 ;
    margin-left: 10px;
}
button{
     background-color:white;
     border: white;
}
img{
    border-radius: 11px;
}
#character {
    position: relative;
    top: 320px;
    left: 50%;
    width: 80px;
    height: 20px;
    /* margin: auto; */
    /* background-color: #ff5722; */
    transform: translateX(-50%);
}
#fallingObject {
    position:relative;
    width: 30px;
    height: 30px;
    /* background-color: #4caf50; */
    border-radius: 50%;
    /* margin: 0 auto; */
}
#negativeFallingObject{
    position:relative;
    width: 30px;
    height: 30px;
    border-radius: 50%;
}
.hidden{
    visibility: hidden;
}

